add spare part form added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 
     <!--    IT 19 1616 48-->
 
-    <string name="app_name">Digital Health</string>
+    <string name="app_name">Riyasewana</string>
     <string name="call_an_ambulance">Call an Ambulance</string>
     <string name="already_have_an_account">Already have an Account? Login</string>
     <string name="create_account">Create Account</string>
