donation basic created.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -199,6 +199,7 @@
     <string name="Glulevelunit">mg/ dL</string>
     <string name="HintCusid">ex : 0773551870</string>
     <string name="searchpatientName">Search by patient name</string>
+    <string name="donationHeader">Enter Payment Details</string>
     <array name="reportTypes">
         <item>Sugar Report(Fasting)</item>
         <item>Full Blood count Report</item>
